# esgf2

./: README.md  pyproject.toml
config/: esg.ini
docs/: workstation.md
esgf2flows/: __init__.py  auth.py  compute.py  config.py  flows.py
examples/workstation/: functions.py  run.py  settings.py
examples/workstation/flows/: publish.json  transfer_and_publish.json
src/: auth.py  compute.py  config.py  flows.py  functions.py  main.py  publish.json  requirements.txt  settings.py  storage.py  transfer_and_publish.json  unpublish.json
wrappers/workstation/: generate_mapfile.py  generate_mapfile.sh  get_pid.py  get_pid.sh  index_publish.py  index_publish.sh  index_unpublish.sh  make_publication_records.sh  run_autocurator.sh
